k8/my-pod.yaml
apiVersion: v1
kind: Pod
metadata:
  name: my-pod
spec:
  containers:
  - name: nginx-con
    image: nginx
    ports:
      - containerPort: 80
