k8/redis-cluster.yaml
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: redis-cluster
spec:
  selector:
    matchLabels:
      app: myapp
  serviceName: "redis-service"
  replicas: 3
  template:
    metadata:
      labels:
        app: myapp
    spec:
      containers:
      - name: redis
        image: redis:6.2
        ports:
        - containerPort: 80
          name: web
        volumeMounts:
        - name: myvolume
          mountPath: /data
  volumeClaimTemplates:
  - metadata:
      name: myvolume
    spec:
      accessModes: [ "ReadWriteOnce" ]
      resources:
        requests:
          storage: 1Gi
