k8/backend-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: my-deployment
spec:
  replicas: 2
  selector:
    matchLabels:
      app: backend
  template:
    metadata:
      labels:
        app: backend
    spec:
      containers:
      - name: hasi-con
        image: hashicorp/http-echo
        args: 
        - "-text=Hello from backend"
        ports:
        - containerPort: 5678

---

apiVersion: v1
kind: Service
metadata:
  name: backend-service
spec:                 ######### type: NodePort/ClusterIP  ########### type belong to service
  selector:
    app: backend
  ports:
  - protocol: TCP     ######## no need nodePort
    port: 80
    targetPort: 5678
