k8/deploy.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: my-deployment
spec:
  replicas: 2
  selector:
    matchLabels:
      app: backend
  template:
    metadata:
      labels:
        app: backend
    spec:
      containers:
      - name: httpd-con
        image: httpd
        ports:
        - containerPort: 80
---
apiVersion: v1
kind: Service
metadata:
  name: simple-web-service
spec:                 ######### type: NodePort/ClusterIP  ########### type belong to service
  type: NodePort
  selector:
    app: backend
  ports:
  - protocol: TCP     ######## no need nodePort
    port: 80
    targetPort: 80
    nodePort: 30081
